--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
           <load src="./html/components/about.html" />
           <load src="./html/components/adv.html" />
           <load src="./html/components/live.html" />
+          <load src="./html/components/calc.html" />
         </div>
      
 
