--- a/src/html/base/head.html
+++ b/src/html/base/head.html
@@ -2,5 +2,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./assets/content/icons/logo-dark.png" rel="icon" type="image/png" data-logo>
     <title>equinox</title>
 </head>
