--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <load src="./html/base/head.html" title="Home" />
   <body class="body" data-theme = 'dark'>
- 
+    
+    <load src="./html/components/preloader.html" />
       <div class="cursor-dot"></div>
       <div class="cursor-circle">
         <span class="cursor-text"></span>
