--- a/src/html/base/head.html
+++ b/src/html/base/head.html
@@ -4,4 +4,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./assets/content/icons/logo-dark.png" rel="icon" type="image/png" data-logo>
     <title>equinox</title>
+    <style>
+        #preloader {
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000; /* Фон прелоадера */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Всегда поверх остальных элементов */
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+  }
+  
+  .preloader-content {
+    text-align: center;
+    color: #fff;
+    font-family: 'Inter';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid rgba(255, 255, 255, 0.3);
+    border-top: 5px solid #fff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin-bottom: 10px;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+ 
+    </style>
 </head>
