--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </button>
         <load src="./html/components/menu.html" />
         
-          <div class="wrapper" data-scroll-container>
+          <div class="wrapper">
             
             <load src="./html/components/header.html" />
             <load src="./html/components/about.html" />
