--- a/src/html/base/head.html
+++ b/src/html/base/head.html
@@ -1,7 +1,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link href="./assets/content/icons/logo-dark.png" rel="icon" type="image/png" data-logo>
     <title>equinox</title>
     <style>
